nuovo libro. sistemato spacing index (ma non mi piace tanto)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p align="right"> Ernest Hemingway, <i>A Moveable Feast</i></p>
 
 
-<p align="left"> [08/01/23]</i></p>
+<p align="left"> <br>[08/01/23]</i></p>
 <p> <i>We cast this message into the cosmos [...]: This is a present from a small
   distant world, a token of our sounds, our science, our images, our music, our
   thoughts, and our feelings. We are attempting to survive our time so we may live
@@ -54,17 +54,17 @@
   our goodwill in a vast and awesome universe.</i> </p>
 <p align="right"> Jimmy Carter, <i>Voyager Golden Record</i></p>
 
-<p align="left"> [28/12/22]</i></p>
+<p align="left"> <br>[28/12/22]</i></p>
  <img src="images/peace.jpeg" alt="">
- <p align="center"> sentendomi festivo </i><br></p>
+ <p align="center"> sentendomi festivo </i></p>
 
-<p align="left"> [10/12/22]</i></p>
+<p align="left"> <br>[10/12/22]</i></p>
 <p> <i> Something about the interior life of a computer
   remains infinitely interesting to me; it’s not romantic, but it is a romance.
   You flip a bunch of microscopic switches really fast and culture pours out. </i> </p>
 <p align="right"> Paul Ford, <i> Why I Still Love Tech</i></p>
 
-<p align="left"> [24/11/22] </i></p>
+<p align="left"> <br>[24/11/22] </i></p>
 <p> qui sotto dove mi piacerebbe essere ora.</p>
 <p> baci, <br> g </p>
  <img src="images/dragons-back.jpeg" alt="">
