--- a/libri.html
+++ b/libri.html
@@ -25,6 +25,7 @@
       <li>Dealers of Lightning</li>
       <li><u>Is Paris Burning?</u></li>
       <li>A Man on the Moon</li>
+      <li>Finzioni</li>
   </ol>
 
   <h3> 2022 </h3>
