--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [10/04/23]</i></p>
+<p> <a href="robe-scritte/chatgpt-scpo-iii.html">continuo con l'harassment</a>.
+  inclusa anche la risposta di Sergei Guriev, MS, PhD, come ci fa notare.
+</p>
+
 <p align="left"> <br> [07/04/23]</i></p>
-<p> <a href="robe scritte/chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti</a>. nel frattempo metto anche la <a href="robe scritte/chatgpt-scpo-i.html">prima</a>.
+<p> <a href="robe-scritte/chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti</a>. nel frattempo metto anche la <a href="robe-scritte/chatgpt-scpo-i.html">prima</a>.
 </p>
 
 <p align="left"> <br> [06/04/23]</i></p>
-<p> <a href="robe scritte/riorientamento.html">riorientamento</a>:
+<p> <a href="robe-scritte/riorientamento.html">riorientamento</a>:
   "What is to be done?" (V. Lenin)
 </p>
 
 <p align="left"> <br> [14/03/23]</i></p>
-<p> <a href="robe scritte/mille-euro.html">mille euro</a>:
+<p> <a href="robe-scritte/mille-euro.html">mille euro</a>:
   ho dato duemila euro (mille miei, mille adam) all'idraulico. questi i pensieri razionali e
   irrazionali prima di sapere se/quanto la proprietaria pagherà.
 </p>
