--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -11,10 +11,11 @@
 <body>
   <h1 align="left"> <a href="index.html">orto</a> > robe scritte  </h1>
 <main class="lineheight">
-<p>[07/04/22] <a href="robe scritte/chatgpt-scpo-ii.html">chatgpt ii</a></p>
-<p>[06/04/22] <a href="robe scritte/riorientamento.html">riorientamento</a></p>
-<p>[14/03/22] <a href="robe scritte/mille-euro.html">mille euro</a></p>
-<p>[01/02/22] <a href="robe scritte/chatgpt-scpo-i.html">chatgpt i</a></p>
+<p>[10/04/22] <a href="robe-scritte/chatgpt-scpo-iii.html">chatgpt iii</a></p>
+<p>[07/04/22] <a href="robe-scritte/chatgpt-scpo-ii.html">chatgpt ii</a></p>
+<p>[06/04/22] <a href="robe-scritte/riorientamento.html">riorientamento</a></p>
+<p>[14/03/22] <a href="robe-scritte/mille-euro.html">mille euro</a></p>
+<p>[01/02/22] <a href="robe-scritte/chatgpt-scpo-i.html">chatgpt i</a></p>
 </main>
 </body>
 </html>
