mi ero dimenticato un libro

--- a/libri.html
+++ b/libri.html
@@ -22,6 +22,7 @@
       <li>The Man from the Future</li>
       <li>The Smartest Guys in the Room</li>
       <li>Reading in the Brain</li>
+      <li>Bullshit Jobs</li>
       <li>Dealers of Lightning</li>
       <li><u>Is Paris Burning?</u></li>
       <li>A Man on the Moon</li>
