--- a/robe-scritte/chatgpt-scpo-iii.html
+++ b/robe-scritte/chatgpt-scpo-iii.html
@@ -11,7 +11,7 @@
 <body>
   <h1 align="left"> <a href="../index.html">orto</a> > <a href="../robe-scritte.html">robe scritte</a> > chatgpt III</h1>
 <main class="lineheight">
-  <p>con bonus alla fine: la risposta del per niente permaloso Sergei Guriev, MS, PhD, alla <a href="../robe-scritte/chatgpt-scpo-ii.html">seconda</a>.</p>
+  <p>con bonus alla fine: la risposta alla <a href="../robe-scritte/chatgpt-scpo-ii.html">seconda</a> del per niente permaloso Sergei Guriev, MS, PhD.</p>
    <p> Da: Giacomo DA ROS <giacomo.daros@sciencespo.fr> </p>
      <p>   Data: 10 apr 2023, 18:41 +0200 </p>
      <p>   A: Sergei GURIEV <sergei.guriev@sciencespo.fr> </p>
