--- a/robe-scritte/riorientamento.html
+++ b/robe-scritte/riorientamento.html
@@ -27,7 +27,7 @@
 <li>Andiamo da CDP dove mi dico: lavorare in un'organizzazione così grande, essere un così minimo cog in the machine, potrà mai dare (a me!) soddisfazione? Non penso.</li>
 <li>Mi faccio spiegare le cose (tipo mate, programmazione) da ChatGPT e mi dico: vedi che forse con un po' di impegno una roba più meaningful saresti riuscito a farla?</li>
 <li>Ovviamente la frustrazione incredibile nel vedere a. che cosa sia il modello a cui si ambisce in questo ambiente, modello che chiameremo PINELLI. b. il modo e le capacità di chi sembra portare a casa le opportunità es. MONTANARI, MARCELINA che sono ridicoli anche per lo standard di qua.</li>
-<li>Per finire, una cosa che mi ha fatto molto arrabbiare e che veramente mi ha fatto pensare di non poter più stare in questo ambiente a lungo: raph che dice a ruggero &quot;my feelings don't care about your data&quot;. EH?!!!?!</li>
+<li>Per finire, una cosa che mi ha fatto molto arrabbiare e che veramente mi ha fatto pensare di non poter più stare in questo ambiente a lungo: Raph che dice a Ruggero &quot;my feelings don't care about your data&quot;. EH?!!!?!</li>
 </ul>
 
 <p>Questa combinazione di cose arriva a questioni di significato, dignità, utilità. Mi sento molto come quando mi sembrava un problema non sapere il greco, non tanto per la sua utilità immediata - qui usato nel senso proprio; comunque scarsa - quanto per l'utilità, o meglio, la dignità che in quel momento aveva nella mia testa. Anche se penso sia comunque degno sapere il greco, e, forse, che chi lo sa sia un po' più degno di me nella mia testa, non è più uno dei miei principali problemi da qualche anno ormai. La definizione di <em>degno</em> cambia a seconda degli stimoli che ci circondano, dei contenuti che consumiamo, dalle esperienze degli altri. Facciamo una breve digressione che spero non sia troppo difficile da comunicare.</p>
@@ -40,11 +40,11 @@
 
 <p>Ora immaginiamo di fare il <em>public policy analyst</em>, il <em>responsabile delle relazioni esterne</em> o, peggio di tutto, il <em>consulente</em>. Già è complesso per le ragioni già citate - <em>cog in the machine</em>, bullshit, presenza di una specie precisa e particolarmente fastidiosa di idioti - attribuire personalmente della dignità a questo tipo di attività. Oltre a questo, però, c'è anche il fatto che la società attribuisce a questo tipo di attività scarsa dignità - probabilmente a ragione.</p>
 
-<p>Il bisogno di validation è quindi senza dubbio, <em>ultimately</em>, interno: ossia, se faccio il consulente e non mi piace, a contribuire alla mia validation personale sono probabilmente i soldi. Questa è una scelta legittima e, per certi punti di vista, interessante. La validation esterna è, secondo me, subordinata a un coefficiente di trasmissione che indica quanto all'individuo interessa il giudizio della società. Tutto il resto, assumendo di volere arrivare ad un livello di parità dove soddisfazione_bullshit = soddisfazione_lavorovero = pace, deve essere riempito con forza di volontà, self-confidence, o simili.</p>
+<p>Il bisogno di validation è quindi senza dubbio, <em>ultimately</em>, interno: ossia, se faccio il consulente e non mi piace, a contribuire alla mia validation personale sono probabilmente i soldi. Questa è una scelta legittima e, per certi punti di vista, interessante. La validation esterna è, secondo me, subordinata a un coefficiente di trasmissione che indica quanto all'individuo interessa il giudizio della società. Tutto il resto, assumendo di volere arrivare ad un livello di parità dove </p> <p align="center"> soddisfazione_bullshit = soddisfazione_lavorovero = pace, </p> <p> deve essere riempito con forza di volontà, self-confidence, o simili.</p>
 
 <p>Possiamo quindi descrivere la soddisfazione lavorativa e lavoro-adiacente attraverso la seguente formula:</p>
 
-<p>S_tot = αS_meaning + βS_retribuzione + γS_esterno + ε,</p>
+<p align="center">S_tot = αS_meaning + βS_retribuzione + γS_esterno + ε,</p>
 
 <p>dove S sta per soddisfazione, α, β e γ per i pesi relativi ai vari componenti della soddifazione, e ε per altri fattori (e.g. forza di volontà, self-confidence) che possono agire notevolmente su questo tipo di soddisfazione.</p>
 
@@ -65,9 +65,9 @@
 <p>Quindi che si fa? Non so. Una risposta potrebbe essere cercare in qualcuno la colpa: nell'idiota me diciottenne, in Sam Altman che non aveva ancora pensato a ChatGPT, nella Zangiacomi e la scuola italiana. Non so. Forse non la soluzione più sana. Al momento me ne vengono in mente altre tre, non perfette ma migliori di questa:</p>
 
 <ol>
-<li>Prendermi un altro master in qualcosa di serio. Avrei il titolo, le competenze, e starei meglio. Avrei pure trent'anni. I contro di questa opzione sono di natura abbastanza logistica: non andrei a lavorare ancora per mille anni, costerebbe, dovrei spostarmi, fare application. Poi, cosa più importante: dove mai mi prenderebbero a fare qualcosa di serio con il mio CV?</li>
+<li>Prendermi un altro master in qualcosa di serio. Avrei il titolo, le competenze, e starei meglio. Avrei pure trent'anni. I contro di questa opzione sono infatti di natura abbastanza logistica: non andrei a lavorare ancora per mille anni, costerebbe, dovrei spostarmi, fare application. Poi, cosa più importante: dove mai mi prenderebbero a fare qualcosa di serio con il mio CV?</li>
 <li>Non prendermi un altro master, finire SciencesPo con il minimo effort possibile, nel frattempo imparare qualcosa tipo software development per conto mio. Non ho forse detto che imparo meglio da solo? [nota: attenzione che SciencesPo potrebbe non essere il benchmark dell'istruzione superiore in tutti i settori]. Non avrei titolo, non avrei sicuramente il 100% delle competenze, probabilmente mi sentirei un impostore. Inoltre avrei bisogno di tanta tanta forza di volontà - cosa che al momento manca.</li>
-<li>Finire ScPo con il minimo effort possibile, sforzarsi un attimo per trovare un lavoro interessante e abbastanza tecnico da poter essere &quot;degno&quot;. Piotr dice cybersecurity: tanta domanda, interessante, auspicabilmente poca bullshit. Bonus: si potrebbe aprire una consulenza dopo un po'. Però quanto tecnico, quanto non tecnico? Bisognerebbe capire un po' meglio che vogliono far fare a gente come noi.</li>
+<li>Finire SciencesPo con il minimo effort possibile, sforzarsi un attimo per trovare un lavoro interessante e abbastanza tecnico da poter essere &quot;degno&quot;. Piotr dice cybersecurity: tanta domanda, interessante, auspicabilmente poca bullshit. Bonus: si potrebbe aprire una consulenza dopo un po'. Però quanto tecnico, quanto non tecnico? Bisognerebbe capire un po' meglio che vogliono far fare a gente come noi.</li>
 </ol>
 
 <p>Non so come finirà. Sarà comunque interessante da leggere tra dieci, venti, trent'anni. Ora non vado a correre perché è notte e fa freddo, ma ci possiamo pensare domani mattina.</p>
