link troppo lungo

--- a/robe-scritte/chatgpt-scpo-iii.html
+++ b/robe-scritte/chatgpt-scpo-iii.html
@@ -51,10 +51,10 @@
   <p>Dear Mr. Da Ros, </p>
   
   <p>I have indeed not responded to your email. I assumed that you would subsequently reread my message and figure out that Sciences Po has not “banned ChatGPT&quot;. We have just asked students not to use ChatGPT without transparent reference. This is fully consistent with our anti-plagiarism policy. If you use ChatGPT and acknowledge it, it is perfectly allowed. Here is a detailed discussion of my thoughts on this issue:
-  <a class="autolink" href="https://www.universityworldnews.com/post.php?story=20230406110524215">https://www.universityworldnews.com/post.php?story=20230406110524215</a></p>
+  <a href="https://www.universityworldnews.com/post.php?story=20230406110524215">link</a></p>
   
   <p>On a personal note, I would like to add that I have a summa cum laude master's degree in computer science and a PhD in math, I have extensive experience in mathematical modeling and coding and have used text analysis and machine learning in my recent research. Actually, in my speech in Reims Campus of Sciences in August 2022, I did use AI (in this case, DALL-E) myself - but of course fully acknowledged it.
-  <a class="autolink" href="https://www.youtube.com/watch?v=b9d5p92n11c">https://www.youtube.com/watch?v=b9d5p92n11c</a></p>
+  <a href="https://www.youtube.com/watch?v=b9d5p92n11c">link</a></p>
   
   <p>I take this opportunity to wish you a good weekend. </p>
   
