nuovo script. link in nuova tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p> un digital orto. what will your verse be? </p>
  <p align="left"> l’orto serve a me per raccogliere un po’ dei dati che creo e
    tenerli in un posto solo. qua quello che leggo: <a href="libri.html">libri</a> 
-   e <a href="articoli.html">non libri</a>.
+   e <a href="non-libri.html">non libri</a>.
    <a href="quote.html">qua</a> un po' di quote più o meno lunghe che mi sono piaciute. poi
   <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
   <a href="robe-scritte.html">qui</a> quello che ho scritto.
