nuovo libro. kindle highlights

--- a/libri.html
+++ b/libri.html
@@ -18,15 +18,22 @@
   <h3> 2023 </h3>
   <ol>
       <li> Murmurs of Earth: The Voyager Interstellar Record</li>
-      <li> <u> The Information: A History, A Theory, A Flood </u> </li>
+      <li> <u> The Information: A History, A Theory, A Flood </u>
+        <p> <i> The telegraph enabled people to think of weather as a widespread and interconnected affair, rather than an assortment of local surprises. </p> </i> 
+        <p> <i> “A scholar,” said Daniel Dennett in 1995, “is just a library’s way of making another library.” </p> </i> </li>
+      </li>
       <li>The Man from the Future</li>
-      <li>The Smartest Guys in the Room</li>
+      <li> <u>The Smartest Guys in the Room</u> </li>
       <li>Reading in the Brain</li>
       <li>Bullshit Jobs</li>
       <li>Dealers of Lightning</li>
-      <li><u>Is Paris Burning?</u></li>
+      <li><a href="kindle_exports/is-paris-burning.html"><u>Is Paris Burning?</u></a></li>
       <li>A Man on the Moon</li>
-      <li>Finzioni</li>
+      <li><a href="kindle_exports/finzioni.html"><u>Finzioni</u></a>
+        <p> <i> Tu, che mi leggi, sei sicuro di capire il mio linguaggio? </p> </i>       </li>
+      <li>Notes to Myself</li>
+      <li>Make Something Wonderful</li>
+
   </ol>
 
   <h3> 2022 </h3>
