--- a/libri.html
+++ b/libri.html
@@ -32,7 +32,9 @@
       <li><a href="kindle_exports/finzioni.html"><u>Finzioni</u></a>
         <p> <i> Tu, che mi leggi, sei sicuro di capire il mio linguaggio? </p> </i>       </li>
       <li>Notes to Myself</li>
-      <li>Make Something Wonderful</li>
+      <li> <a href="kindle_exports/jobs.html"> <u>Make Something Wonderful</u></a> 
+        <p> <i> I grow little of the food I eat [...] . I do not make any of my own clothing. I speak a language I did not invent or refine. I did not discover the mathematics I use. I am protected by freedoms and laws I did not conceive of or legislate, and do not enforce or adjudicate. I am moved by music I did not create myself. When I needed medical attention, I was helpless to help myself survive. I did not invent the transistor, the microprocessor, object oriented programming, or most of the technology I work with. I love and admire my species, living and dead, and am totally dependent on them for my life and well being. <p>Sent from my iPad</p> 
+        </i></p></li>
 
   </ol>
 
