as we may think

--- a/quote.html
+++ b/quote.html
@@ -12,7 +12,15 @@
   <h1 align=left> <a href="index.html">orto</a> > quote </h1>
 <main class="lineheight">
 
-<p> We shape our buildings; thereafter they shape us. </p>
+<p>Consider a future device for individual use, which is a sort of
+  mechanized private file and library. It needs a name, and to coin
+  one at random, "memex" will do. A memex is a device in which an
+  individual stores all his books, records, and communications, and
+  which is mechanized so that it may be consulted with exceeding speed
+  and flexibility. It is an enlarged intimate supplement to his memory.</p>
+<p align='right'> V. Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
+
+  <p> We shape our buildings; thereafter they shape us. </p>
 
 <p align='right'>W. Churchill</p>
 
