--- a/libri.html
+++ b/libri.html
@@ -36,6 +36,7 @@
         <p> <i> I grow little of the food I eat [...] . I do not make any of my own clothing. I speak a language I did not invent or refine. I did not discover the mathematics I use. I am protected by freedoms and laws I did not conceive of or legislate, and do not enforce or adjudicate. I am moved by music I did not create myself. When I needed medical attention, I was helpless to help myself survive. I did not invent the transistor, the microprocessor, object oriented programming, or most of the technology I work with. I love and admire my species, living and dead, and am totally dependent on them for my life and well being. <p>Sent from my iPad</p> 
         </i></p></li>
       <li>Moonraker</li>
+      <li> <u> Pure Invention - How Japan's Pop Culture Conquered the World</u></li>
   </ol>
 
   <h3> 2022 </h3>
@@ -131,7 +132,7 @@
     <li> Digital Minimalism</li>
     <li> <u>Il Conte di Montecristo</u></li>
     <li> Animal Farm</li>
-    <li> <u><a href="kindle_exports/gattopardo.html">Il Gattopardo</u></a> </li>
+    <li> <u><a href="kindle_exports/gattopardo-clean.html">Il Gattopardo</u></a> </li>
     <li> Io Sono il Potere</li>
     <li> These Truths</li>
   </ol>
